--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@zesty-io/sdk": "^0.3.0",
     "bootstrap": "^5.2.2",
     "chalk": "^4.1.2",
-    "next": "^12.0.7",
+    "mui-markdown": "^0.5.5",
+    "next": "^12.3.1",
     "node-fetch": "^2.6.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
